--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
         "handlebars": "^4.7.6",
+        "mongodb": "^3.6.2",
+        "mongoose": "^5.10.6",
         "uniqid": "^5.0.3"
     },
     "devDependencies": {
