--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
     "version": "1.0.0",
     "main": "pathToMain",
     "dependencies": {
+        "bcrypt": "^5.0.0",
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
+        "express-validator": "^6.6.1",
         "handlebars": "^4.7.6",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.2",
         "mongoose": "^5.10.6",
         "uniqid": "^5.0.3"
